--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "scripts": {
     "build:clj": "java -cp src/clj/cljs.jar:src/clj/src clojure.main src/clj/build.clj",
+    "build:kotlin": "kotlinc-js -output src/kotlin/test.js -module-kind commonjs src/kotlin/test.kt",
     "run:js": "node src/plain-js/test.js > out/plain-js.json",
     "run:immutable-js": "node src/immutable-js/test.js > out/immutable-js.json",
-    "run:clj": "node src/clj/test.js > out/clj.json"
+    "run:clj": "node src/clj/test.js > out/clj.json",
+    "run:kotlin": "node src/kotlin/test.js > out/kotlin.json"
   },
   "dependencies": {
     "immutable": "^3.8.1",
+    "kotlin": "^1.1.0",
     "memwatch-next": "^0.3.0"
   }
 }
