--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "scripts": {
     "build:clj": "java -cp src/clj/cljs.jar:src/clj/src clojure.main src/clj/build.clj",
     "build:kotlin": "kotlinc-js -output src/kotlin/test.js -module-kind commonjs src/kotlin/test.kt",
+    "build:go": "~/go/bin/gopherjs build src/go/test.go -o src/go/test.js",
     "run:js": "node src/plain-js/test.js > out/plain-js.json",
     "run:immutable-js": "node src/immutable-js/test.js > out/immutable-js.json",
     "run:clj": "node src/clj/test.js > out/clj.json",
-    "run:kotlin": "node src/kotlin/test.js > out/kotlin.json"
+    "run:kotlin": "node src/kotlin/test.js > out/kotlin.json",
+    "run:go": "node src/go/test.js > out/go.json"
   },
   "dependencies": {
     "immutable": "^3.8.1",
