--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "build:clj": "java -cp src/clj/cljs.jar:src/clj/src clojure.main src/clj/build.clj",
     "build:kotlin": "kotlinc-js -output src/kotlin/test.js -module-kind commonjs src/kotlin/test.kt",
     "build:go": "~/go/bin/gopherjs build src/go/test.go -o src/go/test.js",
-    "build:rkt": "racks -n -t babel -d src/racket/out src/racket/test.rkt",
+    "build:rkt": "racks -t babel -d src/racket/out src/racket/test.rkt",
     "build:elm": "cd src/elm && elm-make --yes Main.elm --output elm.js",
     "build:reason": "bsb",
     "run:js": "node src/plain-js/test.js > out/plain-js.json",
