--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "scripts": {
-    "build:clj":
-      "java -cp src/clj/cljs.jar:src/clj/src clojure.main src/clj/build.clj",
-    "build:kotlin":
-      "kotlinc-js -output src/kotlin/test.js -module-kind commonjs src/kotlin/test.kt",
+    "build:clj": "java -cp src/clj/cljs.jar:src/clj/src clojure.main src/clj/build.clj",
+    "build:kotlin": "kotlinc-js -output src/kotlin/test.js -module-kind commonjs src/kotlin/test.kt",
     "build:go": "~/go/bin/gopherjs build src/go/test.go -o src/go/test.js",
     "build:rkt": "racks -t babel -d src/racket/out src/racket/test.rkt",
     "build:elm": "cd src/elm && elm-make --yes Main.elm --output elm.js",
@@ -17,8 +15,7 @@
     "run:rkt": "node src/racket/out/dist/modules/test.rkt.js > out/racket.json",
     "run:elm": "node src/elm/test.js > out/elm.json",
     "run:reason": "node lib/js/src/reason/test.js > out/reason.json",
-    "run:elixir":
-      "node --experimental-modules src/elixir/build/index.mjs > out/elixir.json"
+    "run:elixir": "node --experimental-modules src/elixir/build/index.mjs > out/elixir.json"
   },
   "dependencies": {
     "elm": "^0.18.0",
