update results for Immutable.js v4.0.0-rc.9

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "bs-platform": "^3.0.0",
     "elm": "^0.18.0",
-    "immutable": "^3.8.2",
+    "immutable": "^4.0.0-rc.9",
     "kotlin": "^1.2.41",
     "kotlin-compiler": "^1.2.41",
     "memwatch-next": "^0.3.0"
